--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -22,6 +22,46 @@ html {
 	box-shadow: 0 0.15rem 1.75rem 0 rgba(31, 45, 65, 0.15);
   }
 
+  .shadow {
+	box-shadow: 0 0.15rem 1.75rem 0 rgba(31, 45, 65, 0.15);
+  }
+
+
+  .profile-header-container{
+    margin: 0 auto;
+    text-align: center;
+}
+
+.profile-header-img {
+    /* padding: 54px; */
+}
+
+.profile-header-img > img.img-circle {
+    width: 100px;
+    height: 100px;
+}
+
+small {
+	display: block;
+/* line-height: 1.428571429; */
+color: #999;
+}
+
+.profile-header {
+    margin-top: 43px;
+}
+
+.rank-label-container {
+    margin-top: -19px;
+    /* z-index: 1000; */
+    text-align: center;
+}
+
+.label.label-default.rank-label {
+    /* background-color: rgb(81, 210, 183); */
+    padding: 5px 10px 5px 10px;
+    border-radius: 27px;
+}
 .nav-link {
 	color: white !important;
 }
