--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -22,7 +22,7 @@ html {
 	box-shadow: 0 0.15rem 1.75rem 0 rgba(31, 45, 65, 0.15);
   }
 
-  .shadow {
+  .shadow-light {
 	box-shadow: 0 0.15rem 1.75rem 0 rgba(31, 45, 65, 0.15);
   }
 
