--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -26,6 +26,14 @@ html {
 	box-shadow: 0 0.15rem 1.75rem 0 rgba(31, 45, 65, 0.15);
   }
 
+  .btn-circle {
+	width: 50px;
+	height: 50px;
+	padding: 10px 16px;
+	font-size: 18px;
+	line-height: 1.33;
+	border-radius: 25px;
+  }
 
   .profile-header-container{
     margin: 0 auto;
@@ -34,6 +42,10 @@ html {
 
 .profile-header-img {
     /* padding: 54px; */
+}
+
+img.img-circle {
+	object-fit: cover;
 }
 
 .profile-header-img > img.img-circle {
@@ -82,8 +94,17 @@ color: #999;
 	background-color: #eff3f9 !important;
 }
 
+.border-left {
+	border-left: 1px dashed #333;
+}
+
 .text-light {
 	color: #eff3f9 !important;
+}
+
+.text-wide {
+	text-transform: uppercase;
+	letter-spacing: 1px;
 }
 
 #layout {
@@ -135,6 +156,14 @@ color: #999;
 	display: inline;
 	height: 25px;
 	margin-right: 10px;
+}
+
+.bg-gradient {
+	border: 2px solid;
+	border-image-source: linear-gradient(45deg,
+	rgba(0, 151, 255, 1) 0%,
+	rgb(174, 0, 255) 100%);
+	border-image-slice: 1;
 }
 
 .brand {
