--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -26,6 +26,13 @@ html {
 	box-shadow: 0 0.15rem 1.75rem 0 rgba(31, 45, 65, 0.15);
   }
 
+.zip {
+	border: none;
+	border-radius: 10px;
+	outline: none;
+	box-sizing: border-box;
+}
+
   .btn-circle {
 	width: 50px;
 	height: 50px;
